syntax = "proto3";

package user;

message UserId {
  int64 id = 1;
}

message UserParams {
  string username = 1;
  string password = 2;
  string avatar = 3;
  string phone = 4;
  string name = 5;
  string address = 6;
  string birthday = 7;
}

message BaseUser {
  int64 id = 1;
  string username = 2;
  string avatar = 3;
  string phone = 4;
  string name = 5;
  string address = 6;
  string birthday = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message reqLogin {
  string username = 1;
  string password = 2;
}

message RespLogin {
  string token = 1;
}

message CommonOK {
  int64 code = 1;
  string msg = 2;
}

message SelectParameters{
  int64 page = 1;
  int64 pageSize = 2;
}

message respFindAll {
  repeated BaseUser users = 1;
}

service Users {
  rpc login (reqLogin) returns (BaseUser);
  rpc create(UserParams) returns(BaseUser);
  rpc findOne(UserId) returns (BaseUser);
  rpc findAll(SelectParameters) returns (respFindAll);
  rpc update(BaseUser) returns (BaseUser);
  rpc destroy (UserId) returns (CommonOK);
}
